# CDIAC-ff_data

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  changelog.md  pyproject.toml
.datalad/: config
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  data.md  default.md  feature_request.md
.github/actions/get-files-datalad/: action.yaml
.github/actions/init-git-annex-and-remote/: action.yaml
.github/workflows/: ci.yaml  ci.yml  release.yaml
changelog/: 1.docs.md  1.fix.md  1.improvement.md  10.fix.md  3.fix.md  7.docs.md  7.fix.md  8.fix.md  9.fix.md  README.md
src/cdiac_ff_data/: __init__.py  download.py
src/cdiac_ff_data/config/: __init__.py  versions.py
tests/unit/: test_download.py
