[project]
name = "cdiac-ff-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "CC BY-NC-SA"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
]

[tool.ruff]
src = ["src"]
target-version = "py312"
lint.select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
lint.unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
lint.ignore = [
    "D200",  # One-line docstring should fit on one line with quotes
    "D400",  # First line should end with a period
    #"PLC0206",  # Extracting value from dictionary without calling `.items()`
    # switched off here because it seems to flag issues
]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",  # Documentation not needed in tests
    "S101",  # S101 Use of `assert` detected
    "PLR2004" # Magic value used in comparison
]
#"docs/source/notebooks/*" = [
#    "D100",  # Missing docstring at the top of file
#    "E402",  # Module level import not at top of file
#    "S101",  # Use of `assert` detected
#]
"scripts/*" = [
    "S101" # S101 Use of `assert` detected
]
"dodo.py" = [
    "E501"  # don't enforce line length
]


[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
