[project]
name = "cdiac_ff_data"
version = "0.1.0"
description = "Download CDIAC fossil fuel related CO2 emissions data and convert to primap2 format"
readme = "README.md"
license = "CC BY-NC-SA"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "towncrier>=25.8.0",
]

[tool.ruff]
src = ["src"]
target-version = "py312"
lint.select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
lint.unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
lint.ignore = [
    "D200",  # One-line docstring should fit on one line with quotes
    "D400",  # First line should end with a period
    #"PLC0206",  # Extracting value from dictionary without calling `.items()`
    # switched off here because it seems to flag issues
]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",  # Documentation not needed in tests
    "S101",  # S101 Use of `assert` detected
    "PLR2004" # Magic value used in comparison
]
#"docs/source/notebooks/*" = [
#    "D100",  # Missing docstring at the top of file
#    "E402",  # Module level import not at top of file
#    "S101",  # Use of `assert` detected
#]
"scripts/*" = [
    "S101" # S101 Use of `assert` detected
]
"dodo.py" = [
    "E501"  # don't enforce line length
]


[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.towncrier]
# The name of your Python package
package = "cdiac_ff_data"
# The path to your Python package.
# If your package lives in 'src/myproject/', it must be 'src',
# but if you don't keep your code in a 'src' dir, remove the
# config option
package_dir = "src"

# directory for the changelog input files
directory = "changelog"
# Where you want your news files to come out, `NEWS.rst` is the default.
# This can be .rst or .md, towncrier's default template works with both.
filename = "changelog.md"

title_format = "## CDIAC-ff_data {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/primap-community/CDIAC-ff_data/pulls/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = false

  [[tool.towncrier.type]]
  directory = "version"
  name = "New Dataset Version"
  showcontent = true