[project]
name = "cdiac_ff_data"
version = "0.1.1"
description = "Download CDIAC fossil fuel related CO2 emissions data and convert to primap2 format"
readme = "README.md"
#license = "CC BY-NC-SA"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "towncrier>=25.8.0",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.1.0",
    "liccheck>=0.9.2",
    "setuptools>=80.0.0, <82.0.0", # <82 is needed because liccheck needs pkg_resources which was removed in 82
    "pip>=26.0.1",
]

## coverage
[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 50  # adjust to what makes sense for the individual repository
skip_empty = true
show_missing = true
# Regexes for lines to exclude from consideration in addition to the defaults
exclude_also = [
    # Don't complain about missing type checking code:
    "if TYPE_CHECKING",
]


## ruff
[tool.ruff]
src = ["src"]
target-version = "py312"
lint.select = [
    "E",  # pycodestyle error
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
    "PL",  # pylint
    "TRY",  # tryceratops
    "NPY",  # numpy rules
    "RUF",  # ruff specifics
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    # pandas support via pandas-vet. In some cases we will want to disable
    # this because it can lead to too many false positives.
    "PD",
]
lint.unfixable = [
    "PD002",  # Disable autofix for inplace as this often introduces bugs
]
lint.ignore = [
    "D200",  # One-line docstring should fit on one line with quotes
    "D400",  # First line should end with a period
    #"PLC0206",  # Extracting value from dictionary without calling `.items()`
    # switched off here because it seems to flag issues
]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"test*.py" = [
    "D",  # Documentation not needed in tests
    "S101",  # S101 Use of `assert` detected
    "PLR2004" # Magic value used in comparison
]
#"docs/source/notebooks/*" = [
#    "D100",  # Missing docstring at the top of file
#    "E402",  # Module level import not at top of file
#    "S101",  # Use of `assert` detected
#]
"scripts/*" = [
    "S101" # S101 Use of `assert` detected
]
"dodo.py" = [
    "E501"  # don't enforce line length
]


[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


## Towncrier
[tool.towncrier]
# The name of your Python package
package = "cdiac_ff_data"
# The path to your Python package.
# If your package lives in 'src/myproject/', it must be 'src',
# but if you don't keep your code in a 'src' dir, remove the
# config option
package_dir = "src"

# directory for the changelog input files
directory = "changelog"
# Where you want your news files to come out, `NEWS.rst` is the default.
# This can be .rst or .md, towncrier's default template works with both.
filename = "changelog.md"

title_format = "## CDIAC-ff_data {version} ({project_date})"
underlines = ["", "", ""]
issue_format = "[#{issue}](https://github.com/primap-community/CDIAC-ff_data/pulls/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "docs"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = false

  [[tool.towncrier.type]]
  directory = "version"
  name = "New Dataset Version"
  showcontent = true

## liccheck
[tool.liccheck]
# TODO: work on list. this is just copied from FAOSTAT_data repo for testing purposes
authorized_licenses = [
    "bsd",
    "bsd license",
    "BSD 3-Clause",
    "CC0",
    "apache",
    "apache 2.0",
    "apache software",
    "apache software license",
    "Apache License, Version 2.0",
    "Historical Permission Notice and Disclaimer (HPND)",
    "isc license",
    "isc license (iscl)",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "LGPLv2+",
    "GNU Lesser General Public License v2 (LGPLv2)",
    "GNU Lesser General Public License v2 or later (LGPLv2+)",
    "mit",
    "mit license",
    "Mozilla Public License 2.0 (MPL 2.0)",
    "python software foundation",
    "python software foundation license",
    "zpl 2.1",
    'CMU License (MIT-CMU)',
    'GNU General Public License v3 (GPLv3)',
    'GNU Lesser General Public License v3 (LGPLv3)',
]

unauthorized_licenses = [
    "agpl",
    "gnu agpl",
    "gpl v3",
    "gplv3",
    "gpl v2",
    "gplv2",
    "gpl v1",
    "gplv1",
]
# strategy_ini_file = "./liccheck.ini"
level = "STANDARD"  # this is also the default
# requirement_txt_file = "./requirements.txt" # ignored if dependencies or optional_dependencies are defined
# reporting_txt_file = "path/to/reporting.txt file" # by default is None
# no_deps = false
dependencies = true # to load [project.dependencies]
dependency-groups = ["dev"] # to load extras from [project.optional-dependencies]

#[tool.liccheck.authorized_packages]
#uuid = "1.30"
